--- a/CSharp/intelligence-LUIS/Web.config
+++ b/CSharp/intelligence-LUIS/Web.config
@@ -7,8 +7,8 @@
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
     <add key="BotId" value="YourBotId" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
+    <add key="MicrosoftAppId" value="58cdfafb-af2b-4b1b-8599-b3c22f4b7f59" />
+    <add key="MicrosoftAppPassword" value="cuHpZWRNGik4owmZKEgZf4T" />
 
     <!--
     This is a free trial Microsoft Bing Spell Check key with limited QPS.
@@ -16,9 +16,12 @@
     Subscription URL: https://www.microsoft.com/cognitive-services/en-us/subscriptions?productId=/products/56ec2df6dbe2d91324586008
     -->
     <add key="BingSpellCheckApiKey" value="8ae90e80bc4346d59c0f07529dadaa4e" />
-    
+    <add key="QAMakerApiKey" value="35f8945cdce448419ee8b449d52671d8" />
+    <add key="QAKnowledgeBaseId" value="3f0ddc3c-9005-4a27-95c2-37650b707f1f" />
+
     <!-- Boolean value to enable correcting the text before processing it-->
-    <add key="IsSpellCorrectionEnabled" value="false" />
+    <add key="IsSpellCorrectionEnabled" value="true" />
+    <add key="IsQAEnabled" value="true" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
